prima parte bug fix